--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Replace the header contents:
 -->
 
     <header>
-      <img src="Logo-monogram-for-web.png" width="100" align="right" height="100" alt="KH_monogram">
+      <img src="Logo.png" width="100" align="right" height="100" alt="KH_monogram">
       <h1>Luis Martinez JOUR108 Twitter Guide</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
