--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Quality rating:</b> 100% Quality</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>One thing I learned in Journalism 108 is how important it is to stay updated in current events as well as report about them, one of the best ways to do that was through Twitter and they showed us just how valuable of a tool it could be for journalism, and so a rpoffesional Twitter is needed and here is how to create one!</p>
 
           </div>
 
